backend/k8s/manifests/base/apps/error-pages/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: error-page
  namespace: frontend
  labels:
    app: error-page
spec:
  selector:
    app: error-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
